k8s/base/app1/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  namespace: app1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: demo
        image: harbor.atoy.dev/public/istio-demo-app:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
